test/integration/ingress/manifests/basic/mistyped_crbackend/ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: hug
spec:
  controller: haproxy.org/ingress-controller
